--- a/resources/css/user/tailwind.css
+++ b/resources/css/user/tailwind.css
@@ -6435,6 +6435,14 @@ body{
   --tw-text-opacity: 1 !important;
   color: rgb(129 93 242 / var(--tw-text-opacity)) !important;
 }
+.group.active .group-\[\.active\]\:bg-green-500 {
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(27 144 115 / var(--tw-bg-opacity)) !important;
+}
+.group.active .group-\[\.active\]\:text-green-500 {
+    --tw-text-opacity: 1 !important;
+    color: rgb(4 133 101 / var(--tw-text-opacity)) !important;
+}
 .group.active .group-\[\.active\]\:text-white{
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
