delete all notification

--- a/resources/css/user/tailwind2.css
+++ b/resources/css/user/tailwind2.css
@@ -52050,8 +52050,14 @@ h6 {
 
 .bg-green-500 {
     --tw-bg-opacity: 1 !important;
-    background-color: rgb(212 240 229 / var(--tw-bg-opacity)) !important
+    background-color: rgb(4 133 101 / var(--tw-bg-opacity)) !important
 }
+.bg-green-500\/20 {
+    background-color: rgb(4 133 101 / 0.2) !important;
+}
+
+.bg-green-500\/75 {
+    background-color: rgb(4 133 101 / 0.75) !important; }
 
 .bg-green-500\/20 {
     background-color: #2ab57d33 !important
@@ -53958,7 +53964,7 @@ input:checked~.dot {
 
 .group[data-theme-color=green] .group-data-\[theme-color\=green\]\:bg-green-500 {
     --tw-bg-opacity: 1 !important;
-    background-color: rgb(212 240 229 / var(--tw-bg-opacity)) !important
+    background-color: rgb(4 133 101 / var(--tw-bg-opacity)) !important;
 }
 
 .group[data-theme-color=green] .group-data-\[theme-color\=green\]\:bg-green-500\/20 {
